[workspace]

members = [
    "libeir_frontend",
    "libeir_diagnostics",
    "libeir_intern",
    "libeir_syntax_erl",
    "libeir_ir",
    "libeir_passes",
    "libeir_interpreter",
    "libeir_tests",
    "libeir_lowerutils",
    "tools",
    "util/libeir_util_datastructures",
    "util/libeir_util_pattern_compiler",
    "util/libeir_util_binary",
    "util/libeir_util_number",
    "util/libeir_util_parse",
    "util/libeir_util_parse_listing",
    "util/libeir_util_dot_graph",
    "util/scoped_cell",
]
