[package]
name = "core_erlang_compiler"
version = "0.1.0"
authors = ["HansiHE <hansihe@hansihe.com>"]

[build-dependencies]
peg = "0.5.4"

[dependencies]
either = "1.1.0"
petgraph = "0.4.5"
prettytable-rs = "0.6.7"
string-intern = "0.1.6"
pretty = "0.3.3"
itertools = "0.7.8"
lazy_static = "1.1.0"

pattern-compiler = { path = "../pattern-compiler" }
util = { path = "../util" }

[dev-dependencies]
tempdir = "0.3"
