[package]
name = "core_erlang_compiler"
version = "0.1.0"
authors = ["HansiHE <hansihe@hansihe.com>"]
autobins = false
build = "build.rs"

[build-dependencies]
lalrpop = "0.16.3"

[dependencies]
either = "1.1.0"
petgraph = "0.4.5"
pretty = "0.3.3"
itertools = "0.7.8"
lazy_static = "1.1.0"

lalrpop-util = "0.16.3"
regex = "0.2.0"

num = "0.2"
num-traits = "0.2"
num-bigint = "0.2"

matches = "0.1.8"

pattern-compiler = { path = "../pattern-compiler" }
util = { path = "../util" }
eir = { path = "../eir" }

[dev-dependencies]
tempdir = "0.3"
