[package]
name = "eir"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

[dependencies]
util = { path = "../util" } 

string-intern = { version = "0.1.7", default-features = false }
pretty = "0.3.3"
lazy_static = "1.2.0"

num = "0.2"
num-traits = "0.2"
num-bigint = "0.2"

cranelift-entity = "0.30.0"

matches = "0.1.8"