[package]
name = "gen_nif"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

[features]
#default = ["print_trace"]
print_trace = []

[dependencies]
llvm-sys = "70"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0" }
eir = { path = "../eir" }
core_erlang_compiler = { path = "../compiler" }

num-traits = "0.2"