[package]
name = "gen_nif"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

[features]
#default = ["print_trace"]
default = ["inkwell/llvm7-0"]
print_trace = []

[dependencies]
llvm-sys = "70"
inkwell = { git = "https://github.com/hansihe/inkwell" }
eir = { path = "../eir" }
hir = { path = "../hir" }

num-traits = "0.2"
