[package]
name = "core_erlang_interpreter"
version = "0.1.0"
authors = ["hansihe"]

[features]
default = ["trace"]
trace = []

[dependencies]
num = "0.2"
num-traits = "0.2"
num-bigint = "0.2"
tempdir = "0.3"
lazy_static = "1.2"
pretty = "0.3.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#core_erlang_compiler = { path = "../compiler" }
#eir = { path = "../eir" }

