[package]
name = "libeir_diagnostics"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>", "Luke Imhoff <Kronic.Deth@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
termcolor = "0.3"
failure = "0.1"
itertools = "0.8"
unicode-width = "0.1"

[dev-dependencies]
pretty_assertions = "0.5"
