[package]
name = "libeir_intern"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libeir_diagnostics = { path = "../libeir_diagnostics" }

rustc-hash = "1.0"
lazy_static = "1.2"