[package]
name = "libeir_interpreter"
version = "0.1.0"
authors = ["hansihe"]
edition = "2018"

[features]
default = ["trace"]
trace = []

[dependencies]
num = "0.2"
num-traits = "0.2"
tempdir = "0.3"
lazy_static = "1.2"
pretty = "0.3.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

libeir_ir = { path = "../libeir_ir" }
libeir_intern = { path = "../libeir_intern" }
libeir_util = { path = "../libeir_util" }

[dependencies.rug]
version = "1.2"
default-features = false
features = ["integer", "float", "rand"]
