[package]
name = "libeir_ir"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

[dependencies]
libeir_intern = { path = "../libeir_intern" }
libeir_diagnostics = { path = "../libeir_diagnostics" }
libeir_util = { path = "../libeir_util" } 

string-intern = { version = "0.1.7", default-features = false }
pretty = "0.3.3"
lazy_static = "1.2.0"
itertools = "0.8.0"

num-traits = "0.2"

cranelift-entity = "0.30.0"

petgraph = "0.4.13"

matches = "0.1.8"
regex = "1"

num-bigint = { git = "https://github.com/hansihe/num-bigint.git" }

serde = { version = "1.0", features = ["derive"] }
bincode = "1.1"

#[dependencies.rug]
#version = "1.2"
#default-features = false
#features = ["integer", "float", "rand"]