[package]
name = "libeir_ir"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"
build = "build.rs"
license = "MIT OR Apache-2.0"

[features]
binary_serialization = ["bincode"]

[dependencies]
libeir_intern = { path = "../libeir_intern" }
libeir_diagnostics = { path = "../libeir_diagnostics" }
libeir_util_datastructures = { path = "../util/libeir_util_datastructures" }
libeir_util_parse = { path = "../util/libeir_util_parse" }
libeir_util_number = { path = "../util/libeir_util_number" }

string-intern = { version = "0.1.7", default-features = false }
pretty = "0.3.3"
lazy_static = "1.2.0"
itertools = "0.8.0"

cranelift-entity = "0.51.0"
bumpalo = "2.6.0"

petgraph = "0.4"

matches = "0.1.8"
regex = "1"

serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.1", optional = true }

lalrpop-util = "0.17"

snafu = "0.5"

[dev-dependencies]
pretty_assertions = "0.6"

[build-dependencies]
lalrpop = "0.17"

#[dependencies.rug]
#version = "1.2"
#default-features = false
#features = ["integer", "float", "rand"]
