[package]
name = "libeir_passes"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
libeir_ir = { path = "../libeir_ir" }
libeir_intern = { path = "../libeir_intern" }
libeir_util_pattern_compiler = { path = "../util/libeir_util_pattern_compiler" }
libeir_util_dot_graph = { path = "../util/libeir_util_dot_graph" }
libeir_diagnostics = { path = "../libeir_diagnostics" }

matches = "0.1.8"

cranelift-entity = "0.56.0"

petgraph = "0.4"

bumpalo = { git = "https://github.com/bitwalker/bumpalo", branch = "nightly_alloc", features = ["nightly", "collections"] }

fnv = "1.0.3"

log = "0.4"

hashbrown = { git = "https://github.com/bitwalker/hashbrown.git", features = ["raw", "nightly"] }

[dev-dependencies]
simple_logger = "1.0"
