[package]
name = "libeir_syntax_erl"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>", "Luke Imhoff <Kronic.Deth@gmail.com>"]
readme = "README.md"
publish = false
edition = "2018"
license = "../LICENSE.md"

build = "build.rs"

[dependencies]
libeir_diagnostics = { path = "../libeir_diagnostics" }
libeir_ir = { path = "../libeir_ir" }
libeir_intern = { path = "../libeir_intern" }
libeir_util_datastructures = { path = "../util/libeir_util_datastructures" }
libeir_util_num = { path = "../util/libeir_util_num" }
libeir_util_parse = { path = "../util/libeir_util_parse" }

cranelift-entity = "0.30.0"

rustc-hash = "1.0"
lalrpop-util = "0.17"
glob = "0.2"
termcolor = "0.3"
snafu = "0.5"
itertools = "0.8"
lazy_static = "1.2"
either = "1.5"

num-bigint = { git = "https://github.com/hansihe/num-bigint.git" }

# [dependencies.rug]
# version = "1.2"
# default-features = false
# features = ["integer", "float", "rand"]

[dev-dependencies]
pretty_assertions = "0.5"

[build-dependencies]
lalrpop = "0.17"
