[package]
name = "libeir_syntax_erl"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>", "Luke Imhoff <Kronic.Deth@gmail.com>"]
readme = "README.md"
publish = false
edition = "2018"
license = "MIT OR Apache-2.0"

build = "build.rs"

[dependencies]
libeir_diagnostics = { path = "../libeir_diagnostics" }
libeir_ir = { path = "../libeir_ir" }
libeir_intern = { path = "../libeir_intern" }
libeir_util_datastructures = { path = "../util/libeir_util_datastructures" }
libeir_util_number = { path = "../util/libeir_util_number" }
libeir_util_parse = { path = "../util/libeir_util_parse" }
libeir_util_parse_listing = { path = "../util/libeir_util_parse_listing" }

codespan-reporting = "0.9"
cranelift-entity = "0.56.0"
rustc-hash = "1.0"
lalrpop-util = "0.17"
glob = "0.2"
termcolor = "0.3"
snafu = "0.5"
itertools = "0.8"
lazy_static = "1.2"
either = "1.5"

bumpalo = { git = "https://github.com/bitwalker/bumpalo", branch = "nightly_alloc", features = ["nightly", "collections"] }

# [dependencies.rug]
# version = "1.2"
# default-features = false
# features = ["integer", "float", "rand"]

[dev-dependencies]
pretty_assertions = "0.5"

[build-dependencies]
lalrpop = "0.17"
