[package]
name = "libeir_tests"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

[dependencies]
libeir_ir = { path = "../libeir_ir" }
libeir_passes = { path = "../libeir_passes" }
libeir_syntax_erl = { path = "../libeir_syntax_erl" }
libeir_diagnostics = { path = "../libeir_diagnostics" }
libeir_intern = { path = "../libeir_intern" }
libeir_interpreter = { path = "../libeir_interpreter" }
libeir_lowerutils = { path = "../libeir_lowerutils" }