[package]
authors = ["HansiHE <hansihe@hansihe.com>"]
name = "pattern-compiler"
version = "0.1.0"
edition = "2018"

description = "Utilities for compiling pattern matches into optimal decision trees"
license = "MIT/Apache-2.0"
repository = "https://github.com/hansihe/core_erlang/tree/master/pattern-compiler"

[features]
debug_table_print = ["prettytable-rs"]
#default = ["debug_table_print"]

[dependencies]
either = "1.5"
petgraph = "0.4"
derivative = "1.0"
prettytable-rs = { version = "0.8", optional = true }
itertools = "0.8.0"
