[package]
name = "tools"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

[[bin]]
name = "eir_compile"
path = "src/compile.rs"

[dependencies]
libeir_diagnostics = { path = "../libeir_diagnostics" }
libeir_syntax_erl = { path = "../libeir_syntax_erl" }
#cps_transform = { path = "../cps_transform" }
libeir_ir = { path = "../libeir_ir" }
#core_erlang_interpreter = { path = "../interpreter" }

clap = "2.33.0"
