[package]
name = "tools"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "eir_compile"
path = "src/compile.rs"

[dependencies]
libeir_diagnostics = { path = "../libeir_diagnostics" }
libeir_syntax_erl = { path = "../libeir_syntax_erl" }
libeir_passes = { path = "../libeir_passes" }
libeir_ir = { path = "../libeir_ir" }
libeir_util_parse = { path = "../util/libeir_util_parse" }
libeir_util_parse_listing = { path = "../util/libeir_util_parse_listing" }

clap = "2.33.0"
log = "0.4"
fern = "0.5"
