[package]
name = "any_map"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.3"
hashbrown = { git = "https://github.com/rust-lang/hashbrown.git", features = ["raw", "nightly"] }
