[package]
name = "libeir_etf"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
num-bigint = { git = "https://github.com/hansihe/num-bigint.git" }
snafu = "0.5"
libeir_intern = { path = "../../libeir_intern" }
