[package]
name = "libeir_util_binary"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.8"
num-bigint = { git = "https://github.com/hansihe/num-bigint.git" }