[package]
name = "libeir_util_datastructures"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-entity = "0.30.0"
hashbrown = { version = "0.6", features = ["raw"] }
