[package]
name = "libeir_util_datastructures"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-entity = "0.56.0"
cranelift-bforest = { git = "https://github.com/hansihe/wasmtime.git", branch = "main" }
hashbrown = { git = "https://github.com/bitwalker/hashbrown.git", features = ["raw", "nightly"] }
