[package]
name = "libeir_util_parse"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libeir_diagnostics = { path = "../../libeir_diagnostics" }

snafu = "0.5"

[dev-dependencies]
pretty_assertions = "0.5"
