[package]
name = "meta_table"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { git = "https://github.com/bitwalker/hashbrown.git", features = ["raw", "nightly"] }
